--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.2",
+    "body-parser": "^1.19.0",
     "csv-parser": "^2.2.0",
+    "express": "^4.16.4",
     "mongodb": "^3.2.4"
   }
 }
